--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 spring.application.name=service-registry
-
 server.port=8761
-
-eureka.instance.name=eureka-server
-eureka.client.fetch-registry=false
+eureka.client.fetch-registery=false
 eureka.client.register-with-eureka=false
